--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         <div class="encabezado">
             <div id="fecha"></div>
                 <h1>Lista de tareas</h1>
-                <h1>Somos lo que hacemos de forma repetida. La excelencia no es un acto, sino un hábito</h1>
+                
+                <h1 id="frase">Somos lo que hacemos de forma repetida. La excelencia no es un acto, sino un hábito</h1>
             
             <div class="agregar">
                 <input type="text" id="input" placeholder="Escribe una tarea">
